# popSTR-clean

./: .gitmodules  CMakeLists.txt  README.md
scripts/: runSmall.sh
src/: computePnSlippage.cpp  computePnSlippageDefault.cpp  computeReadAttributes.cpp  msGenotyper.cpp  msGenotyperDefault.cpp
